kuber/3/home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio
             port: 
                number: 9001
      - path: /web
        pathType: Prefix
        backend:
          service:
             name: minioweb
             port: 
                number: 80
